1、增强模型路径检索和向量数据库加载功能。2、添加了优先使用本地模型路径的函数，并提升了与不同包版本的兼容性。3、添加了手动模型下载说明和安装步骤。4、增强了针对zstandard和ChromaDB的依赖安装脚本。5、从用户界面中移除了语义搜索冗余功能。

--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,8 @@ langchain>=0.1.0
 langchain-community>=0.0.20
 langchain-core>=0.1.0
 langchain-text-splitters>=0.2.0
+# 确保使用支持新版本 zstandard 的 langsmith（避免编译错误）
+langsmith>=0.6.0
 
 # 向量数据库（如果安装失败，请参考 INSTALL.md）
 # 注意：chromadb 依赖 zstandard，可能需要编译工具
