--- a/.gitignore
+++ b/.gitignore
@@ -62,6 +62,13 @@ models/
 .deepseek_config.json
 *.config.json
 
+# Prompt 模版文件（用户自定义的模版）
+prompt_templates/
+
+# 保存的报告和问答记录（用户生成的内容）
+saved_reports/
+saved_qa/
+
 # 环境变量
 .env
 .env.local
