1、新增联网搜索功能，允许用户在本地文档无法回答问题时自动搜索互联网获取相关信息；2、添加配置加载和保存功能，支持用户启用或禁用联网搜索；3、优化相关提示信息和错误处理逻辑；更新依赖项以引入新的 ddgs 库。

--- a/requirements.txt
+++ b/requirements.txt
@@ -32,3 +32,9 @@ requests>=2.31.0
 torch>=2.0.0
 transformers>=4.35.0
 
+# 联网搜索功能（可选，用于智能问答的联网搜索）
+# 注意：duckduckgo-search 已重命名为 ddgs，优先使用新库
+ddgs>=9.0.0
+# 如果新库不可用，可以回退到旧库（会显示警告）
+# duckduckgo-search>=6.0.0
+
